src/components/photo/photo.module.css
.Modal {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 40vh;
  height: 40vh;
  transform: translate(-50%, -50%) !important;
  outline: 0;
}
.Overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.2);
}

.container {
  position: relative;
  width: 100%;
  height: 100%;
  flex: 0 0 calc(100% / 3);
}

.image {
  opacity: 1;
  transition: 0.5s ease;
  backface-visibility: hidden;
  width: 100%;
  height: 100%;
  position: relative;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: 0.5s ease;
  background-color: #262626;
}

.container:hover .overlay {
  cursor: pointer;
  opacity: 0.85;
}

.textContainer {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

@media (min-width: 767px) {
  .Modal {
    position: absolute;
    width: 50vw;
    height: 50vw;
  }
}

